fix some css rules that didn't work on IE

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -564,7 +564,6 @@ th {
 .tr-cs {
     width: 18px;
     overflow: visible;
-    text-overflow: initial;
     padding: 0;
     font-size: 0px;
 }
@@ -700,7 +699,7 @@ html, body {
 }
 
 .torrent-buttons a [class^="icon-"], .torrent-buttons a [class*=" icon-"], a.form-input.btn-green>div[class^="icon-"], a.form-input.btn-green>div[class*="icon-"] {
-    vertical-align: initial;
+    vertical-align: top;
 }
 
 #mascotKeepHide {
@@ -808,7 +807,7 @@ html, body {
     width: 100%!important;
     }
     .language {
-    width: initial!important;
+    width: auto!important;
     }
     .refine-container-2 {
     margin-top: 5px;
@@ -824,7 +823,7 @@ html, body {
         width: 100px;
     }
     .refine-container-2 span.form-refine {
-        float: initial!important;
+        float: none!important;
         max-width: none;
     }
     .upload-form-table .table-checkboxes {
@@ -2036,7 +2035,7 @@ p.upload-rules a {
 .upload-tag-form label {
     display:inline-block;
     width: 100%;
-    font-size: unset;
+    font-size: 14px;
     margin-bottom: 1px;
 }
 
@@ -2194,6 +2193,10 @@ table.multiple-upload {
 }
 .admin-content tr:hover {
     background: #d0d0d0;
+}
+
+button [class^="icon-"], button [class*=" icon-"] {
+    vertical-align: top;
 }
 
 /* Language specific CSS */
